fix: overflow

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 2rem;
+    overflow: hidden;
 
     .bg {
         background-image: url(../assets/backgrounds/about.png);
