--- a/src/components/Home.module.scss
+++ b/src/components/Home.module.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
     .bg {
         background-image: url(../assets/backgrounds/home.png);
