--- a/src/components/Rules.module.scss
+++ b/src/components/Rules.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 4rem;
+    overflow: hidden;
 
     .bg {
         background-image: url(../assets/backgrounds/rules.png);
@@ -35,7 +36,7 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        
+
         span{
             color: #FF2727;
         }
