--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 4rem;
+    overflow: hidden;
 
     .bg1 {
         background-image: url(../assets/backgrounds/timeline1.png);
